crates/aion-awl/tests/fixtures/rev2/declarations/valid/call_site_override.awl
//! Render a scene, pinning the call to the large GPU node with a stretched timeout.
workflow render_scene
  input scene_path: String
  outcome rendered: type Render, route success
  outcome no_frames: type Render, route failure

type Render { output_path: String, frames: Int }

worker renderer
  action render(scene_path: String) -> Render
    node gpu_small, timeout 30m

step render
  render(scene_path: scene_path) -> result
    node gpu_large, timeout 3h

  outcome done: when result.frames > 0,
    route rendered(output_path: result.output_path, frames: result.frames)
  outcome blank: otherwise,
    route no_frames(output_path: result.output_path, frames: result.frames)
